@@ -2,6 +2,8 @@ systemd System and Service Manager
 
    systemd (214.6-dev)
 ~~~~~~~
+ * core:
+    - use /dev/null as output if incorrect value is set;
 
    systemd (214.5)
 ~~~~~~~
